3DPrinterOS release notes

5.1.0

    Fixed position requesting after joystick or console executing
    Modification of printrun to make gcodes processing faster (~7 times)

5.0.2

    Fixed bug in reaction on download failure
    Fixed bug in percent get while switching download_thread_flag
    Updated console by adding newer regexps and fixing makerbot console.

5.0.1

    Linux rights warning fixed for RPi
    Fix bug of cancel during gcodes loading, with cause print locally status.

5.0.0

    Cameras now uses single thread and single http connection, greatly decreases cpu usage for bot client and server
    New printer detection algorithm, support multiprinting even if pyusb can't read serial number
    Console/Joysting support
    Bug of cancel during loading gcode, was fixed
    Fixed camera switching page
    Refactoring of almost all code
    Profiles now are stored in memory(for better stability and cleaner code)
    General config reimplementataion(singleton)
    New unhandled exceptions catcher/logger(100% of code covered)
    utils was split in several separate modules
    Upgraded CloudSync launching and control schema
    Fix of path get for CloudSync
    Logs sender upgraded
    Logs writing path changed to user folder
    Linux rights warning schema upgraded
    User folder path for Darwin fixed
    ZMorph code updated to 5.0.0 architecture
    Makerbot conveyor service killing for linux
    Fix of exit sequence for printrun gcode sender

4.8.6

    Updater logic upgraded

4.8.5

    Fixed critical bug in app, which caused total fail of web interface when updater disabled.

4.8.4

    Fixed critical bug in Launcher for Ubuntu

4.8.3

    Fixed bug with unicode paths in CloudSync

4.8.2

    Reboot under Mac OS X disabled
    Additional protection against hanging on restart implemented

4.8.1

    Bug in exit message handler of web interface was Fixed
    App gain more protection for cleaner restart
    Build scripts fixed

4.8.0
