@@ -35,6 +35,7 @@ import version
 import printer_interface
 import config
 import rights
+import makerware_utils
 
 reboot_flag = True # should be True for first boot, even if it isn't re boot
 
@@ -57,9 +58,11 @@ class App(object):
         self.stop_flag = False
         self.updater = updater.Updater()
         self.rights_checker_and_waiter = rights.RightsCheckerAndWaiter(self)
+        self.conveyor_killer_and_waiter = makerware_utils.ConveyorKillerAndWaiter(self)
         self.user_login = user_login.UserLogin(self)
         self.init_interface()
         self.rights_checker_and_waiter.wait()
+        self.conveyor_killer_and_waiter.wait()
         if self.user_login.wait_for_login():
             config.Config.instance().set_profiles(self.user_login.profiles)
             if config.get_settings()["camera"]["enabled"]:
